# serberus

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  cite.bib
.old/bench/: count-instructions.sh  count-mitigations-cloucc.sh  count-mitigations-lfence.sh  count-mitigations-slh.sh  hash3.c  libsodium_salsa20.cc  plot.json.in  stats.json
bench/: .#openssl_chacha20.cc  CMakeLists.txt  CompilationFlags.cmake  Hacl_Chacha20_bench.cc  Hacl_Curve25519_bench.cc  Hacl_Poly1305_bench.cc  additional-baselines.md  auth2.c  auth3.c  auth5.c  auth6.c  auth7.c  baseline_breakdown.json.in  benchmark_memory.h  box2.c  box7.c  breakdown.py.in  cache-main.cc  cache-main.cc.bak  cloucc_breakdown.json.in  disasm.py  generichash2.c  hacl_chacha20.cc  hacl_curve25519.cc  inst-main.cc  libsodium_salsa20.cc  libsodium_sha256.cc  libsodium_sha256_main.c  metamorphic.c  openssl-funcs.txt  openssl_chacha20.cc  openssl_sha256.cc  overlay.sh  overlayplot.sh  perf-main.cc  perf-test.cc  plot.json.in  plot.py  plot2.py  plot3.py  (+15 more)
bench-new/: CMakeLists.txt  benchmarks-mem.c  benchmarks-time.cc  benchmarks.cc  breakdown.cc  cache-main.cc  hacl_curve25519.cc  inst-main.cc  mem-main.cc  openssl_chacha20.cc  plot.py  shared-pseudo.h  shared.h  wrappers.cc  wrappers.h
bench-old/bench/: CMakeLists.txt  breakdown.cc  hacl_poly1305.cc  libsodium_salsa20.cc  libsodium_sha256.cc  mem-main.cc  mitigation-main.cc  openssl_curve25519.cc  plot.py  trace-main.cc
cmake/: #LibsodiumLibrary2.cmake#  .#LibsodiumLibrary2.cmake  AddDriver.cmake  BenchmarkFlags.cmake  BenchmarkFlags2.cmake  BenchmarkFlags3.cmake  ConfigureLibrary.cmake  HaclBenchmark.cmake  HaclLibrary.cmake  LLVMTestSuite.cmake  LibsodiumLibrary.cmake  LibsodiumLibrary2.cmake  OpensslLibrary.cmake  OpensslLibrary2.cmake  PinTool.cmake  RegisterLLVMPass.cmake
docker/: #entrypoint-dev.sh#  .#entrypoint-dev.sh  Dockerfile.dev  docker-build-dev.sh  docker-run-dev.sh  entrypoint-dev.sh
runtime/: CMakeLists.txt  clou.c  clou.h
scripts/: CMakeLists.txt  link.sh.in  make_check.sh  merge_counts.py  merge_counts.sh  merge_lfences.awk  srclocs.sh  srclocs2.sh  taint_diff.sh
src/: AllocaInitPass.cc  AllocaInitPass.h  Attributes.cc  BaselinePass.cc  BreakPass.cc  CFG.cc  CMakeLists.txt  CommandLine.cc  CommandLine.h  DuplicatePass.cc  FenceReplacementPass.cc  FenceReplacementPass.h  FordFulkerson.cc  FordFulkersonMultiBroken.h  FramePromotion.cc  Frontier.cc  Frontier.h  FunctionLocalStacks.cc  Graph.h  InlinePass.cc  InstructionPass.cc  InstructionPass.h  LfencePass.cc  Log.cc  Log.h  LogPass.cc  LoopIndexPass.cc  MemIntrinsicPass.cc  Metadata.cc  MinCutBase.cc  MinCutBase.h  MinCutGreedy2.cc  MinCutSMT.cc  MinCutSMT.h  Mitigate.cc  MitigateDT.cc  MitigatePass.cc  Mitigation.cc  Mitigation.h  NCAStorePass.cc  (+42 more)
src/analysis/: CMakeLists.txt  ConstantAddressAnalysis.cc  LeakAnalysis.cc  NonspeculativeLeakAnalysis.cc  NonspeculativeLeakAnalysis.h  NonspeculativeTaintAnalysis.cc  SpeculativeTaintAnalysis.cc  StackInitAnalysis.cc
src/check/: CMakeLists.txt  ContractChecker.cc  StackInitChecker.cc
src/include/clou/: AllocaInitPass.h  CFG.h  CommandLine.h  FordFulkerson.h  Frontier.h  Metadata.h  MinCutBase.h  MinCutGreedy.h  MinCutSMT.h  NonspeculativeTaint.h  Stat.h  Transmitter.h  containers.h  my_scc_pass.h  util.h
src/include/clou/analysis/: ConstantAddressAnalysis.h  LeakAnalysis.h  NonspeculativeTaintAnalysis.h  SpeculativeTaintAnalysis.h  StackInitAnalysis.h
test/: CMakeLists.txt
test/analyses/: CMakeLists.txt
test/analyses/LeakAnalysis/: CMakeLists.txt
test/analyses/nonspeculative_leak/: CMakeLists.txt  xorbuf.c  xorbuf.exp
test/analyses/nonspeculative_taint/: CMakeLists.txt  NonspeculativeTaintTest.cc  xorbuf.exp
test/hacl/: CMakeLists.txt
test/libsodium/: CMakeLists.txt
test/llvm-test-suite/: CMakeLists.txt
test/openssl/: CMakeLists.txt
test/runtime/: CMakeLists.txt  clou_transform_xor.c
test/tar/: CMakeLists.txt
tools/: CMakeLists.txt  cet.c  libssbd.c  memusage.c  msr.c  ssbd.c  trace_runtime.cc
tools/pin/: CMakeLists.txt  bkptcount.cc  functions.cc  inscount.cc  pin.sh.in
